[package]
name = "cytube-generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixedstr = "0.2.9"
once_cell = "1.17.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
strum = { version = "0.24.1", features = ["derive"] }

[profile.release]
strip=true
lto=true
opt-level="z"
panic="abort"
